--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^7.6.3",
     "nodemailer": "^6.9.6",
     "otp-generator": "^4.0.1",
-    "razorpay": "^2.9.2"
+    "razorpay": "^2.9.2",
+    "twilio": "^4.20.0"
   }
 }
